--- a/Pigalev_API/Pigalev_API.csproj
+++ b/Pigalev_API/Pigalev_API.csproj
@@ -238,6 +238,7 @@
       <DependentUpon>DataModel.edmx</DependentUpon>
     </Content>
     <None Include="Properties\PublishProfiles\FTPProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\FTPProfile1.pubxml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
